MoaiUtils/AntlrParser/Generated/MoaiCppParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from MoaiCppParser.g4 by ANTLR 4.5

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

namespace CppParser {
using System;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5")]
[System.CLSCompliant(false)]
public partial class MoaiCppParser : Parser {
	public const int
		Scope=1, LeftParen=2, RightParen=3, LeftBracket=4, RightBracket=5, LeftBrace=6, 
		RightBrace=7, Less=8, LessEqual=9, Greater=10, GreaterEqual=11, LeftShift=12, 
		RightShift=13, Plus=14, PlusPlus=15, Minus=16, MinusMinus=17, Star=18, 
		Div=19, Mod=20, And=21, Or=22, AndAnd=23, OrOr=24, Caret=25, Not=26, Tilde=27, 
		Question=28, Colon=29, Semi=30, Comma=31, Assign=32, StarAssign=33, DivAssign=34, 
		ModAssign=35, PlusAssign=36, MinusAssign=37, LeftShiftAssign=38, RightShiftAssign=39, 
		AndAssign=40, XorAssign=41, OrAssign=42, Equal=43, NotEqual=44, Arrow=45, 
		Dot=46, Ellipsis=47, Class=48, Struct=49, Union=50, Enum=51, TypeDef=52, 
		Template=53, TypeName=54, Namespace=55, Using=56, IntLiteral=57, FloatLiteral=58, 
		CharLiteral=59, StringLiteral=60, BoolLiteral=61, IntType=62, Modifier=63, 
		AccessSpecifier=64, Preproc=65, LineComment=66, BlockComment=67, Whitespace=68, 
		ObjectiveCDirective=69, LinkageSpecification=70, CommonMacro=71, Id=72;
	public const int
		RULE_file = 0, RULE_topLevelStatement = 1, RULE_declaration = 2, RULE_typeDef = 3, 
		RULE_usingDirective = 4, RULE_functionDefinition = 5, RULE_classDefinition = 6, 
		RULE_baseClause = 7, RULE_constructorDefinition = 8, RULE_destructorDefinition = 9, 
		RULE_memberInitializerList = 10, RULE_memberInitializer = 11, RULE_declarator = 12, 
		RULE_type = 13, RULE_typeSpecifier = 14, RULE_templateParamsBlock = 15, 
		RULE_templateParam = 16, RULE_templateArgsBlock = 17, RULE_templateArg = 18, 
		RULE_nestedNameSpecifier = 19, RULE_bracesBlock = 20, RULE_bracketsBlock = 21, 
		RULE_parensBlock = 22, RULE_blockContent = 23, RULE_expression = 24, RULE_expressionWithoutAngleBrackets = 25;
	public static readonly string[] ruleNames = {
		"file", "topLevelStatement", "declaration", "typeDef", "usingDirective", 
		"functionDefinition", "classDefinition", "baseClause", "constructorDefinition", 
		"destructorDefinition", "memberInitializerList", "memberInitializer", 
		"declarator", "type", "typeSpecifier", "templateParamsBlock", "templateParam", 
		"templateArgsBlock", "templateArg", "nestedNameSpecifier", "bracesBlock", 
		"bracketsBlock", "parensBlock", "blockContent", "expression", "expressionWithoutAngleBrackets"
	};

	private static readonly string[] _LiteralNames = {
		null, "'::'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'<'", "'<='", 
		"'>'", "'>='", "'<<'", "'>>'", "'+'", "'++'", "'-'", "'--'", "'*'", "'/'", 
		"'%'", "'&'", "'|'", "'&&'", "'||'", "'^'", "'!'", "'~'", "'?'", "':'", 
		"';'", "','", "'='", "'*='", "'/='", "'%='", "'+='", "'-='", "'<<='", 
		"'>>='", "'&='", "'^='", "'|='", "'=='", "'!='", "'->'", "'.'", "'...'", 
		"'class'", "'struct'", "'union'", "'enum'", "'typedef'", "'template'", 
		"'typename'", "'namespace'", "'using'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "Scope", "LeftParen", "RightParen", "LeftBracket", "RightBracket", 
		"LeftBrace", "RightBrace", "Less", "LessEqual", "Greater", "GreaterEqual", 
		"LeftShift", "RightShift", "Plus", "PlusPlus", "Minus", "MinusMinus", 
		"Star", "Div", "Mod", "And", "Or", "AndAnd", "OrOr", "Caret", "Not", "Tilde", 
		"Question", "Colon", "Semi", "Comma", "Assign", "StarAssign", "DivAssign", 
		"ModAssign", "PlusAssign", "MinusAssign", "LeftShiftAssign", "RightShiftAssign", 
		"AndAssign", "XorAssign", "OrAssign", "Equal", "NotEqual", "Arrow", "Dot", 
		"Ellipsis", "Class", "Struct", "Union", "Enum", "TypeDef", "Template", 
		"TypeName", "Namespace", "Using", "IntLiteral", "FloatLiteral", "CharLiteral", 
		"StringLiteral", "BoolLiteral", "IntType", "Modifier", "AccessSpecifier", 
		"Preproc", "LineComment", "BlockComment", "Whitespace", "ObjectiveCDirective", 
		"LinkageSpecification", "CommonMacro", "Id"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "MoaiCppParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public MoaiCppParser(ITokenStream input)
		: base(input)
	{
		Interpreter = new ParserATNSimulator(this,_ATN);
	}
	public partial class FileContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(MoaiCppParser.Eof, 0); }
		public TopLevelStatementContext[] topLevelStatement() {
			return GetRuleContexts<TopLevelStatementContext>();
		}
		public TopLevelStatementContext topLevelStatement(int i) {
			return GetRuleContext<TopLevelStatementContext>(i);
		}
		public FileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_file; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMoaiCppParserListener typedListener = listener as IMoaiCppParserListener;
			if (typedListener != null) typedListener.EnterFile(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMoaiCppParserListener typedListener = listener as IMoaiCppParserListener;
			if (typedListener != null) typedListener.ExitFile(this);
		}
	}

	[RuleVersion(0)]
	public FileContext file() {
		FileContext _localctx = new FileContext(Context, State);
		EnterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 55;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Scope) | (1L << LeftBrace) | (1L << Semi) | (1L << Class) | (1L << Struct) | (1L << Union) | (1L << Enum) | (1L << TypeDef) | (1L << Template) | (1L << Namespace) | (1L << Using) | (1L << IntType))) != 0) || _la==Id) {
				{
				{
				State = 52; topLevelStatement();
				}
				}
				State = 57;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			State = 58; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TopLevelStatementContext : ParserRuleContext {
		public DeclarationContext declaration() {
			return GetRuleContext<DeclarationContext>(0);
		}
		public TypeDefContext typeDef() {
			return GetRuleContext<TypeDefContext>(0);
		}
		public UsingDirectiveContext usingDirective() {
			return GetRuleContext<UsingDirectiveContext>(0);
		}
		public FunctionDefinitionContext functionDefinition() {
			return GetRuleContext<FunctionDefinitionContext>(0);
		}
		public ClassDefinitionContext classDefinition() {
			return GetRuleContext<ClassDefinitionContext>(0);
		}
		public ConstructorDefinitionContext constructorDefinition() {
			return GetRuleContext<ConstructorDefinitionContext>(0);
		}
		public DestructorDefinitionContext destructorDefinition() {
			return GetRuleContext<DestructorDefinitionContext>(0);
		}
		public TopLevelStatementContext[] topLevelStatement() {
			return GetRuleContexts<TopLevelStatementContext>();
		}
		public TopLevelStatementContext topLevelStatement(int i) {
			return GetRuleContext<TopLevelStatementContext>(i);
		}
		public ITerminalNode Namespace() { return GetToken(MoaiCppParser.Namespace, 0); }
		public ITerminalNode Id() { return GetToken(MoaiCppParser.Id, 0); }
		public TopLevelStatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_topLevelStatement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMoaiCppParserListener typedListener = listener as IMoaiCppParserListener;
			if (typedListener != null) typedListener.EnterTopLevelStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMoaiCppParserListener typedListener = listener as IMoaiCppParserListener;
			if (typedListener != null) typedListener.ExitTopLevelStatement(this);
		}
	}

	[RuleVersion(0)]
	public TopLevelStatementContext topLevelStatement() {
		TopLevelStatementContext _localctx = new TopLevelStatementContext(Context, State);
		EnterRule(_localctx, 2, RULE_topLevelStatement);
		int _la;
		try {
			State = 88;
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 60; declaration();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 61; typeDef();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 62; usingDirective();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 63; functionDefinition();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 64; classDefinition();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 65; constructorDefinition();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 66; destructorDefinition();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 67; Match(LeftBrace);
				State = 71;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Scope) | (1L << LeftBrace) | (1L << Semi) | (1L << Class) | (1L << Struct) | (1L << Union) | (1L << Enum) | (1L << TypeDef) | (1L << Template) | (1L << Namespace) | (1L << Using) | (1L << IntType))) != 0) || _la==Id) {
					{
					{
					State = 68; topLevelStatement();
					}
					}
					State = 73;
					ErrorHandler.Sync(this);
					_la = TokenStream.La(1);
				}
				State = 74; Match(RightBrace);
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 75; Match(Namespace);
				State = 77;
				_la = TokenStream.La(1);
				if (_la==Id) {
					{
					State = 76; Match(Id);
					}
				}

				State = 79; Match(LeftBrace);
				State = 83;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Scope) | (1L << LeftBrace) | (1L << Semi) | (1L << Class) | (1L << Struct) | (1L << Union) | (1L << Enum) | (1L << TypeDef) | (1L << Template) | (1L << Namespace) | (1L << Using) | (1L << IntType))) != 0) || _la==Id) {
					{
					{
					State = 80; topLevelStatement();
					}
					}
					State = 85;
					ErrorHandler.Sync(this);
					_la = TokenStream.La(1);
				}
				State = 86; Match(RightBrace);
				}
				break;
			case 10:
				EnterOuterAlt(_localctx, 10);
				{
				State = 87; Match(Semi);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclarationContext : ParserRuleContext {
		public DeclaratorContext declarator() {
			return GetRuleContext<DeclaratorContext>(0);
		}
		public TypeSpecifierContext typeSpecifier() {
			return GetRuleContext<TypeSpecifierContext>(0);
		}
		public TemplateParamsBlockContext templateParamsBlock() {
			return GetRuleContext<TemplateParamsBlockContext>(0);
		}
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMoaiCppParserListener typedListener = listener as IMoaiCppParserListener;
			if (typedListener != null) typedListener.EnterDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMoaiCppParserListener typedListener = listener as IMoaiCppParserListener;
			if (typedListener != null) typedListener.ExitDeclaration(this);
		}
	}

	[RuleVersion(0)]
	public DeclarationContext declaration() {
		DeclarationContext _localctx = new DeclarationContext(Context, State);
		EnterRule(_localctx, 4, RULE_declaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 92;
			_la = TokenStream.La(1);
			if (_la==Template) {
				{
				State = 90; Match(Template);
				State = 91; templateParamsBlock();
				}
			}

			State = 99;
			switch (TokenStream.La(1)) {
			case Scope:
			case IntType:
			case Id:
				{
				State = 94; typeSpecifier();
				}
				break;
			case Class:
				{
				State = 95; Match(Class);
				}
				break;
			case Struct:
				{
				State = 96; Match(Struct);
				}
				break;
			case Union:
				{
				State = 97; Match(Union);
				}
				break;
			case Enum:
				{
				State = 98; Match(Enum);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 101; declarator(0);
			State = 104;
			_la = TokenStream.La(1);
			if (_la==Assign) {
				{
				State = 102; Match(Assign);
				State = 103; expression();
				}
			}

			State = 106; Match(Semi);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeDefContext : ParserRuleContext {
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public TypeDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeDef; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMoaiCppParserListener typedListener = listener as IMoaiCppParserListener;
			if (typedListener != null) typedListener.EnterTypeDef(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMoaiCppParserListener typedListener = listener as IMoaiCppParserListener;
			if (typedListener != null) typedListener.ExitTypeDef(this);
		}
	}

	[RuleVersion(0)]
	public TypeDefContext typeDef() {
		TypeDefContext _localctx = new TypeDefContext(Context, State);
		EnterRule(_localctx, 6, RULE_typeDef);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 108; Match(TypeDef);
			State = 110;
			_la = TokenStream.La(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Class) | (1L << Struct) | (1L << Union) | (1L << Enum))) != 0)) {
				{
				State = 109;
				_la = TokenStream.La(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Class) | (1L << Struct) | (1L << Union) | (1L << Enum))) != 0)) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
				    Consume();
				}
				}
			}

			State = 112; type();
			State = 113; Match(Semi);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UsingDirectiveContext : ParserRuleContext {
		public UsingDirectiveContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_usingDirective; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMoaiCppParserListener typedListener = listener as IMoaiCppParserListener;
			if (typedListener != null) typedListener.EnterUsingDirective(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMoaiCppParserListener typedListener = listener as IMoaiCppParserListener;
			if (typedListener != null) typedListener.ExitUsingDirective(this);
		}
	}

	[RuleVersion(0)]
	public UsingDirectiveContext usingDirective() {
		UsingDirectiveContext _localctx = new UsingDirectiveContext(Context, State);
		EnterRule(_localctx, 8, RULE_usingDirective);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 115; Match(Using);
			State = 116; Match(Namespace);
			State = 120;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,9,Context);
			while ( _alt!=1 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber ) {
				if ( _alt==1+1 ) {
					{
					{
					State = 117;
					MatchWildcard();
					}
					} 
				}
				State = 122;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,9,Context);
			}
			State = 123; Match(Semi);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionDefinitionContext : ParserRuleContext {
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public BracesBlockContext bracesBlock() {
			return GetRuleContext<BracesBlockContext>(0);
		}
		public TemplateParamsBlockContext templateParamsBlock() {
			return GetRuleContext<TemplateParamsBlockContext>(0);
		}
		public FunctionDefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionDefinition; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMoaiCppParserListener typedListener = listener as IMoaiCppParserListener;
			if (typedListener != null) typedListener.EnterFunctionDefinition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMoaiCppParserListener typedListener = listener as IMoaiCppParserListener;
			if (typedListener != null) typedListener.ExitFunctionDefinition(this);
		}
	}

	[RuleVersion(0)]
	public FunctionDefinitionContext functionDefinition() {
		FunctionDefinitionContext _localctx = new FunctionDefinitionContext(Context, State);
		EnterRule(_localctx, 10, RULE_functionDefinition);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 127;
			_la = TokenStream.La(1);
			if (_la==Template) {
				{
				State = 125; Match(Template);
				State = 126; templateParamsBlock();
				}
			}

			State = 129; type();
			State = 130; bracesBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassDefinitionContext : ParserRuleContext {
		public BracesBlockContext bracesBlock() {
			return GetRuleContext<BracesBlockContext>(0);
		}
		public TemplateParamsBlockContext templateParamsBlock() {
			return GetRuleContext<TemplateParamsBlockContext>(0);
		}
		public TypeSpecifierContext typeSpecifier() {
			return GetRuleContext<TypeSpecifierContext>(0);
		}
		public ITerminalNode Id() { return GetToken(MoaiCppParser.Id, 0); }
		public BaseClauseContext baseClause() {
			return GetRuleContext<BaseClauseContext>(0);
		}
		public ClassDefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classDefinition; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMoaiCppParserListener typedListener = listener as IMoaiCppParserListener;
			if (typedListener != null) typedListener.EnterClassDefinition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMoaiCppParserListener typedListener = listener as IMoaiCppParserListener;
			if (typedListener != null) typedListener.ExitClassDefinition(this);
		}
	}

	[RuleVersion(0)]
	public ClassDefinitionContext classDefinition() {
		ClassDefinitionContext _localctx = new ClassDefinitionContext(Context, State);
		EnterRule(_localctx, 12, RULE_classDefinition);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 133;
			_la = TokenStream.La(1);
			if (_la==TypeDef) {
				{
				State = 132; Match(TypeDef);
				}
			}

			State = 137;
			_la = TokenStream.La(1);
			if (_la==Template) {
				{
				State = 135; Match(Template);
				State = 136; templateParamsBlock();
				}
			}

			State = 139;
			_la = TokenStream.La(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Class) | (1L << Struct) | (1L << Union) | (1L << Enum))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
			    Consume();
			}
			State = 144;
			_la = TokenStream.La(1);
			if (_la==Scope || _la==IntType || _la==Id) {
				{
				State = 140; typeSpecifier();
				State = 142;
				_la = TokenStream.La(1);
				if (_la==Colon) {
					{
					State = 141; baseClause();
					}
				}

				}
			}

			State = 146; bracesBlock();
			State = 148;
			_la = TokenStream.La(1);
			if (_la==Id) {
				{
				State = 147; Match(Id);
				}
			}

			State = 150; Match(Semi);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BaseClauseContext : ParserRuleContext {
		public TypeSpecifierContext[] typeSpecifier() {
			return GetRuleContexts<TypeSpecifierContext>();
		}
		public TypeSpecifierContext typeSpecifier(int i) {
			return GetRuleContext<TypeSpecifierContext>(i);
		}
		public BaseClauseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_baseClause; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMoaiCppParserListener typedListener = listener as IMoaiCppParserListener;
			if (typedListener != null) typedListener.EnterBaseClause(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMoaiCppParserListener typedListener = listener as IMoaiCppParserListener;
			if (typedListener != null) typedListener.ExitBaseClause(this);
		}
	}

	[RuleVersion(0)]
	public BaseClauseContext baseClause() {
		BaseClauseContext _localctx = new BaseClauseContext(Context, State);
		EnterRule(_localctx, 14, RULE_baseClause);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 152; Match(Colon);
			State = 153; typeSpecifier();
			State = 158;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==Comma) {
				{
				{
				State = 154; Match(Comma);
				State = 155; typeSpecifier();
				}
				}
				State = 160;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConstructorDefinitionContext : ParserRuleContext {
		public TypeSpecifierContext typeSpecifier() {
			return GetRuleContext<TypeSpecifierContext>(0);
		}
		public ITerminalNode Id() { return GetToken(MoaiCppParser.Id, 0); }
		public ParensBlockContext parensBlock() {
			return GetRuleContext<ParensBlockContext>(0);
		}
		public BracesBlockContext bracesBlock() {
			return GetRuleContext<BracesBlockContext>(0);
		}
		public TemplateParamsBlockContext templateParamsBlock() {
			return GetRuleContext<TemplateParamsBlockContext>(0);
		}
		public MemberInitializerListContext memberInitializerList() {
			return GetRuleContext<MemberInitializerListContext>(0);
		}
		public ConstructorDefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_constructorDefinition; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMoaiCppParserListener typedListener = listener as IMoaiCppParserListener;
			if (typedListener != null) typedListener.EnterConstructorDefinition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMoaiCppParserListener typedListener = listener as IMoaiCppParserListener;
			if (typedListener != null) typedListener.ExitConstructorDefinition(this);
		}
	}

	[RuleVersion(0)]
	public ConstructorDefinitionContext constructorDefinition() {
		ConstructorDefinitionContext _localctx = new ConstructorDefinitionContext(Context, State);
		EnterRule(_localctx, 16, RULE_constructorDefinition);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 163;
			_la = TokenStream.La(1);
			if (_la==Template) {
				{
				State = 161; Match(Template);
				State = 162; templateParamsBlock();
				}
			}

			State = 165; typeSpecifier();
			State = 166; Match(Scope);
			State = 167; Match(Id);
			State = 168; parensBlock();
			State = 170;
			_la = TokenStream.La(1);
			if (_la==Colon) {
				{
				State = 169; memberInitializerList();
				}
			}

			State = 172; bracesBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DestructorDefinitionContext : ParserRuleContext {
		public TypeSpecifierContext typeSpecifier() {
			return GetRuleContext<TypeSpecifierContext>(0);
		}
		public ITerminalNode Id() { return GetToken(MoaiCppParser.Id, 0); }
		public ParensBlockContext parensBlock() {
			return GetRuleContext<ParensBlockContext>(0);
		}
		public BracesBlockContext bracesBlock() {
			return GetRuleContext<BracesBlockContext>(0);
		}
		public DestructorDefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_destructorDefinition; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMoaiCppParserListener typedListener = listener as IMoaiCppParserListener;
			if (typedListener != null) typedListener.EnterDestructorDefinition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMoaiCppParserListener typedListener = listener as IMoaiCppParserListener;
			if (typedListener != null) typedListener.ExitDestructorDefinition(this);
		}
	}

	[RuleVersion(0)]
	public DestructorDefinitionContext destructorDefinition() {
		DestructorDefinitionContext _localctx = new DestructorDefinitionContext(Context, State);
		EnterRule(_localctx, 18, RULE_destructorDefinition);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 174; typeSpecifier();
			State = 175; Match(Scope);
			State = 176; Match(Tilde);
			State = 177; Match(Id);
			State = 178; parensBlock();
			State = 179; bracesBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MemberInitializerListContext : ParserRuleContext {
		public MemberInitializerContext[] memberInitializer() {
			return GetRuleContexts<MemberInitializerContext>();
		}
		public MemberInitializerContext memberInitializer(int i) {
			return GetRuleContext<MemberInitializerContext>(i);
		}
		public MemberInitializerListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_memberInitializerList; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMoaiCppParserListener typedListener = listener as IMoaiCppParserListener;
			if (typedListener != null) typedListener.EnterMemberInitializerList(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMoaiCppParserListener typedListener = listener as IMoaiCppParserListener;
			if (typedListener != null) typedListener.ExitMemberInitializerList(this);
		}
	}
